--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=https://adminapi.darchtech.com/api
-VITE_DOMAIN_NAME=trimurthigroup.com
+VITE_API_BASE_URL=https://newadminapi.darchtech.com/api
+VITE_DOMAIN_NAME=trimurtigroupindia.com
